# reception-robot-sdk

./: .gitignore  README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/cpp/: CMakeLists.txt  audio_engine.cc  audio_engine.h  audio_engine_jni.cc  audio_utils.h  face_detect_jni.cc  logging_macros.h  playing_callback.cc  playing_callback.h  recording_callback.cc  recording_callback.h  rkai_trigger_word_jni.cc  rkai_vad_jni.cc  sound_recording.cc  sound_recording.h  triggerword_callback.cc  triggerword_callback.h  vad_callback.cc  vad_callback.h
android/cpp/rkai/: CMakeLists.txt
android/cpp/rkai/include/: rkai.h  rkai_audio.h  rkai_facedetect.h  rkai_image.h  rkai_trigger_word.h  rkai_type.h  rkai_vad.h
android/cpp/rkai/include/android_porting/: android_fopen.h
android/cpp/rkai/include/bytetrack/: BaseBYTETracker.h  BaseSTrack.h  bytetrack_human_pose.h  dataType.h  kalmanFilter.h  lapjv_bytetrack.h
android/cpp/rkai/include/tracking/: base_track.h  base_tracker.h  kalman_filter.h  lapjv.h  munkres.h  tracking_matrix.cpp  tracking_matrix.h  utils_tracking.h
android/cpp/rkai/include/utils/: logger.h  rkai_postprocess.h  util.h
android/cpp/rkai/src/: CMakeLists.txt  librkai.pc.cmake  rkai.c  rkai_audio.cc  rkai_facedetect.cc  rkai_image.cc  rkai_trigger_word.cc  rkai_vad.cc
android/cpp/rkai/src/android_porting/: android_fopen.c
android/cpp/rkai/src/bytetrack/: CMakeLists.txt  kalmanFilter.cpp  lapjv_bytetrack.cpp
android/cpp/rkai/src/tracking/: CMakeLists.txt  base_track.cpp  base_tracker.cpp  kalman_filter.cpp  lapjv.cpp  munkres.cpp
android/cpp/rkai/src/utils/: CMakeLists.txt  logger.c  rkai_postprocess.cc  util.c
android/src/main/: AndroidManifest.xml
android/src/main/assets/model/face_detect/: anchor_information.txt  best.rknn
android/src/main/assets/model/trigger_word/: bc.rknn  bc_config.txt  conv.rknn  conv_config.txt
android/src/main/assets/model/vad/: vad.rknn  vad_config.txt
android/src/main/kotlin/com/example/smart_robot/: AudioWriter.kt  FaceDetect.kt  RecordedSegment.kt  SmartRobotPlugin.kt  TriggerWord.kt  Utils.kt  VAD.kt  WaveformExtractor.kt
android/src/main/kotlin/com/example/smart_robot/common/: EventEmitter.kt
android/src/main/kotlin/com/example/smart_robot/event/: AudioEvent.kt  EventData.kt  RecordedSegment.kt
android/src/main/kotlin/com/example/smart_robot/io/audio/: AudioRecordingForAIModel.kt
android/src/main/kotlin/com/example/smart_robot/speech/: TriggerWordDetectionFlow.kt  TriggerWordEventListener.kt  VoiceActivityDetectionFlow.kt  VoiceActivityEventListener.kt
android/src/main/kotlin/com/example/smart_robot/utils/: Audio.kt
android/src/test/kotlin/com/example/smart_robot/: SmartRobotPluginTest.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/smart_robot_example/: MainActivity.kt
example/integration_test/: plugin_integration_test.dart
example/lib/: main.dart
example/test/: widget_test.dart
lib/: audio_event.dart  audio_event_listener.dart  smart_robot.dart  smart_robot_method_channel.dart  smart_robot_platform_interface.dart
test/: smart_robot_method_channel_test.dart  smart_robot_test.dart
